# opentrader-gpt-binance-futures

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
data/: company_event_sample.json  evaluation_seed.json  sample_documents.json  strategy_registry.json
docs/: architecture.md  company-event-monitor.md  crypto-architecture.md  crypto-runbook.md  crypto-security.md  data-dictionary.md  research-protocol.md  researcher-trial.md  roadmap.md  strategy-governance.md
packaging/: CompanyEventMonitor.spec  README.txt  windows_entry.py
scripts/: build_windows.ps1
src/company_event_monitor/: __init__.py  agreement.py  analysis.py  annotations.py  api.py  bootstrap.py  cli.py  deepseek.py  desktop.py  docx_reports.py  domain.py  evaluation.py  market.py  (+11 more)
tests/: test_approval.py  test_audit.py  test_binance.py  test_binance_execution.py  test_binance_runtime.py  test_binance_streams.py  test_binance_ws_runtime.py  test_company_event_agreement.py  test_company_event_bootstrap.py  test_company_event_evaluation.py  test_company_event_ingestion.py  test_company_event_monitor.py  test_company_event_parsing.py  test_company_event_registry.py  test_company_event_storage.py  test_company_querying.py  test_control.py  test_desktop.py  test_distributed_control.py  test_external_ingestion.py  test_extraction.py  test_futures_portfolio.py  test_futures_risk.py  test_intelligence_api.py  test_intelligence_worker.py  test_learning.py  test_learning_runtime.py  test_market.py  test_market_data.py  test_market_lineage.py  test_openai_decision.py  test_openai_research.py  test_paper_runtime.py  test_performance_accounting.py  test_private_fill_accounting.py  test_promotion_governance.py  test_research.py  test_research_manifest.py  test_research_validation.py  test_research_workspace.py  (+8 more)
(+61 files in other folders)
