[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "company-event-monitor"
version = "0.8.0"
description = "Auditable A-share research and GPT-approved USD-M futures infrastructure"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27,<1",
  "keyring>=25,<27",
  "pdfplumber>=0.11,<1",
  "python-docx>=1.1,<2",
  "pydantic>=2.8,<3",
  "pydantic-settings>=2.4,<3",
]

[project.optional-dependencies]
api = ["fastapi>=0.115,<1", "uvicorn[standard]>=0.30,<1"]
trader = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "psycopg[binary]>=3.2,<4",
  "redis>=5,<7",
  "websockets>=15,<16",
]
dashboard = ["pandas>=2.2,<3", "streamlit>=1.40,<2"]
dev = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "pytest>=8.3,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.6,<1",
]

[project.scripts]
crypto-trader = "crypto_event_trader.cli:main"
crypto-trader-worker = "crypto_event_trader.worker:main"
crypto-paper-worker = "crypto_event_trader.paper_worker:main"
crypto-intelligence-worker = "crypto_event_trader.intelligence_worker:main"
crypto-research-validator = "crypto_event_trader.research_validator_cli:main"
company-events = "company_event_monitor.cli:main"
company-events-sync = "company_event_monitor.sync:main"
company-events-register = "company_event_monitor.registry:main"
company-events-evaluate = "company_event_monitor.evaluation:main"
company-events-export-annotations = "company_event_monitor.annotations:main"
company-events-bootstrap = "company_event_monitor.bootstrap:main"
company-events-desktop = "company_event_monitor.desktop:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
